--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,13 @@ steps:
     includePreviewVersions: true
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+  
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: '83aa1c53-16e0-4478-94f9-c40fe301b5ee'
+    appName: 'sm-dot-net-app-service'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
