--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,9 @@ jobs:
       - name: Deploy to Server
         run: |
           REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa alyf_user@13.91.220.141 "echo \"$REPO_NAME\" && cd \$REPO_NAME && pwd "
+          echo "Repository Name: $REPO_NAME"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa alyf_user@13.91.220.141 "
+          echo \"Changing to directory: /path/to/your/repo/\$REPO_NAME\" &&
+          cd /path/to/your/repo/\$REPO_NAME && pwd ||
+          (echo 'Failed to change directory' && exit 1)
+          "
