--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,13 @@
 name: CI
+
 on:
+  # Triggers the workflow on push or pull request events but only for the "develop" branch
   push:
     branches: [ "develop" ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,10 +19,39 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
       - name: Deploy to Server
         run: |
+          set -e
+
           REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
-          echo "Repository Name: $REPO_NAME"
+          BRANCH_NAME=$(echo ${{ github.ref }} | cut -d'/' -f3)
+          CLONE_URL="https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git"
+          case $BRANCH_NAME in
+            "develop")
+              IP=${{ secrets.ADV_LITE_VM_IP_DEVELOP }}
+              ;;
+            "main")
+              IP=${{ secrets.ADV_LITE_VM_IP_MAIN }}
+              ;;
+            *)
+              echo "Unsupported branch: $BRANCH_NAME"
+              exit 1
+              ;;
+          esac
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa alyf_user@13.91.220.141 "
-          echo \"Changing to directory: /path/to/your/repo/$REPO_NAME\" &&
-          cd /path/to/your/repo/\$REPO_NAME && pwd ||
-          (echo 'Failed to change directory' && exit 1)
+            echo \"$BRANCH_NAME\" &&
+            pwd && 
+            cd $REPO_NAME &&
+            pwd && 
+            cp .env /tmp/.env &&
+            docker compose down &&
+            docker system prune -f &&
+            cd .. &&
+            rm -rf $REPO_NAME &&
+            git clone $CLONE_URL &&
+            cd $REPO_NAME &&
+            git checkout $BRANCH_NAME &&
+            cp /tmp/.env .env &&
+            docker compose build --no-cache &&
+            docker compose up -d &&
+            sleep 10 &&
+            docker ps
           "
