--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the "develop" branch
   push:
     branches: [ "develop" ]
-
+  pull_request:
+    branches: [ "main" ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -14,29 +15,4 @@ jobs:
     steps:
       - name: COPY stage PEM key
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-      - name: Deploy to Server
-        run: |
-          set -e
-
-          REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
-          BRANCH_NAME=$(echo ${{ github.ref }} | cut -d'/' -f3)
-          CLONE_URL="https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git"
-          case $BRANCH_NAME in
-            "develop")
-              IP=${{ secrets.ADV_LITE_VM_IP_DEVELOP }}
-              ;;
-            "main")
-              IP=${{ secrets.ADV_LITE_VM_IP_MAIN }}
-              ;;
-            *)
-              echo "Unsupported branch: $BRANCH_NAME"
-              exit 1
-              ;;
-          esac
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa alyf_user@$IP "
-            echo \"$IP\" &&
-            pwd 
-          "
+          echo " URL :${{ github.event.pull_request.html_url}}
