--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
       - name: COPY stage PEM key
         run: |
-          echo " URL :${{ github.event.pull_request.number }}
+          echo " URL :${{ github.event.pull_request.number }}"
