--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,34 @@ name: CI
 
 on:
   # Triggers the workflow on push or pull request events but only for the "develop" branch
-  push:
-    branches: [ "develop" ]
   pull_request:
     branches: [ "main" ]
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  print-pr-number:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: COPY stage PEM key
+      - name: Deploy to Server
         run: |
-          echo " URL :${{ github.event.pull_request.number }}"
+          REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
+          PR=$(echo ${{github.event.pull_request.number }})
+          BRANCH_NAME=$(echo ${{ github.ref }} | cut -d'/' -f3)
+          CLONE_URL="https://${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git"
+          CLONE_ALYF_API_SERVER_URL="https://${{ secrets.GH_TOKEN }}@github.com/alyf-lab/alyf_api_server.git"
+          git clone $CLONE_URL
+          cd $REPO_NAME
+          git fetch origin pull/122/head:pr-122
+          git checkout pr-122
+          cat README.md
+          cd ..
+          git clone $CLONE_ALYF_API_SERVER_URL
+          cp -r $REPO_NAME alyf_api_server/
+          cd alyf_api_server/
+          sed -i 's|git+https://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@github.com/alyf-lab/alyf_pyutils.git|#git+https://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@github.com/alyf-lab/alyf_pyutils.git\n/app/alyf_pyutils/|'requirements/prod.txt
+          cat requirements/prod.txt
+          source .env
+          export ALYF_USER=sdesai
+          ./new_deploy.sh
