--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           REPO_NAME="alyf_pyutils"
           PR=$(echo ${{github.event.pull_request.number }})
+          echo $PR
           git clone "https://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@github.com/alyf-lab/${REPO_NAME}.git"
           cd $REPO_NAME
           git fetch origin pull/122/head:pr-122
