--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           REPO_NAME="alyf_pyutils"
           PR=$(echo ${{github.event.pull_request.number }})
           echo $PR
-          git clone "https://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@github.com/alyf-lab/alyf_pyutils.git"
+          git clone https://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@github.com/alyf-lab/alyf_pyutils.git
           cd $REPO_NAME
           git fetch origin pull/122/head:pr-122
           git checkout pr-122
@@ -25,7 +25,7 @@ jobs:
           cd ..
 
       - name: Clone alyf_api_server
-        run: git clone "https://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@github.com/alyf-lab/alyf_api_server.git"
+        run: git clone https://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@github.com/alyf-lab/alyf_api_server.git
 
       - name: Copy content from alyf_pyutils to alyf_api_server
         run: cp -r $REPO_NAME alyf_api_server/
